# agent-squire

./: .agent-squire.example.toml  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  MANIFEST.json  README.md  dist-workspace.toml
.cargo/: config.toml
.sspec/: .gitignore  .meta.json  project.md
.sspec/changes/26-06-01T15-46_extarct-markdown-link/: design.md  memory.md  spec.md  tasks.md
.sspec/changes/26-06-03T20-48_md-backlinks/: design.md  memory.md  spec.md  tasks.md
.sspec/changes/26-06-10T01-22_compose/: design.md  memory.md  spec.md  tasks.md
.sspec/changes/26-06-13T18-06_gather/: design.md  memory.md  spec.md  tasks.md
.sspec/changes/26-06-14T22-54_smart-indent/: design.md  memory.md  spec.md  tasks.md
.sspec/changes/26-06-25T17-02_img-clipboard/: design.md  memory.md  spec.md  tasks.md
.sspec/changes/26-06-25T23-46_data-toc/: design.md  memory.md  spec.md  tasks.md
.sspec/changes/26-06-28T22-20_rearange/: design.md  memory.md  spec.md  tasks.md
.sspec/changes/26-06-29T19-41_rearrange-dst/: design.md  memory.md  spec.md  tasks.md
.sspec/changes/26-06-30T00-40_gather-zip/: design.md  memory.md  spec.md  tasks.md
.sspec/requests/: 26-06-01T15-32_extarct-markdown-link.md  26-06-10T00-36_composer.md  26-06-28T18-48_rearange.md
.sspec/spec-docs/: builtin-source-resolver.md  compose-template-engine.md  runtime-encoding.md  shared-encoding.md
docs/: architecture.md  patch-edit-compatibility.md
src/: cli.rs  external.rs  lib.rs
src/builtins/: mod.rs  read_lines.rs  read_range.rs  source.rs  tmp.rs
src/builtins/compose/: compile.rs  help_doc.rs  mod.rs  model.rs  modifiers.rs  output.rs  parser.rs  render.rs  sources.rs  text.rs
src/builtins/data_toc/: analyze.rs  mod.rs  render.rs  types.rs  util.rs
src/builtins/gather/: interactive.rs  mod.rs  model.rs  parser.rs  sources.rs  template.rs  zip.rs
src/builtins/img/: mod.rs
src/builtins/imgweb/: mod.rs
src/builtins/info/: mod.rs
src/builtins/md_backlinks/: mod.rs
src/builtins/md_links/: graph.rs  mod.rs  model.rs  output.rs  parse.rs  resolve.rs  sources.rs
src/builtins/now/: mod.rs
src/builtins/patch_edit/: io.rs  match_apply.rs  mod.rs  model.rs  output.rs  parse.rs  text.rs
src/builtins/rearrange/: SPEC.md  ast.rs  error.rs  mod.rs  model.rs  output.rs  parser.rs  path.rs  plan.rs  prompt.md  textio.rs
src/runtime/: encoding.rs  input.rs  mod.rs  output.rs  pathutil.rs
src/shared/: encoding.rs  file_sources.rs  markdown.rs  mod.rs
tests/: clap.rs  compose.rs  data_toc.rs  gather.rs  info.rs  md_backlinks.rs  md_links.rs  patch_edit_compat.rs  read_lines.rs  rearrange.rs  tmp.rs
(+16 files in other folders)
