[package]
name = "agent-squire"
version = "0.1.0"
edition = "2021"
description = "A local CLI toolbox for humans and agents."
license = "MIT"
readme = "README.md"
repository = "https://example.invalid/agent-squire"
keywords = ["cli", "agent", "toolbox", "patch"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "agent_squire"
path = "src/lib.rs"

[[bin]]
name = "squire"
path = "src/bin/squire.rs"

[[bin]]
name = "agent-squire"
path = "src/bin/agent-squire.rs"

[[bin]]
name = "asq"
path = "src/bin/asq.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive", "wrap_help"] }
encoding_rs = "0.8"
glob = "0.3"
ignore = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "1"
toml = "0.8"
walkdir = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
