[workspace]
resolver = "3"

[package]
name = "agent-squire"
authors = ["frostime"]
version = "0.8.3"
edition = "2024"
rust-version = "1.85"
default-run = "squire"
description = "A local CLI toolbox for humans and agents."
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/frostime/agent-squire"
keywords = ["cli", "agent", "toolbox", "patch"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "agent_squire"
path = "src/lib.rs"

[[bin]]
name = "squire"
path = "src/bin/squire.rs"

[[bin]]
name = "agent-squire"
path = "src/bin/agent-squire.rs"

[[bin]]
name = "asq"
path = "src/bin/asq.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive", "wrap_help"] }
encoding_rs = "0.8"
glob = "0.3"
ignore = "0.4"
regex = "1"
rustyline = "14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "1"
toml = "0.8"
walkdir = "2"
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["trace"] }
open = "5"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
